--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@ When I'm not coding or playing music, I love to go on runs. </p>
        
         </div>
         <p><br></p>
-    <p>created in 2021 | Julia H. </p>
+    <p>established 2021-23 | Julia H. </p>
     </section>
 </body>
