--- a/experience.html
+++ b/experience.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="personal.css">
     <section class="head">
         <ul>
-             <!-- <li><a href="mailto:juliah6169@gmail.com"  onclick="openCity(event,'Contact')" >Contact</a></li>-->
-         <!--    <li><a href="awards.html">Awards</a></li> -->
+             <!-- <li><a href=""  onclick="openCity(event,'Contact')" >Contact</a></li>-->
+         
        
             <li><a href="projects.html">Projects</a></li>
             <li><a href="experience.html">Experience</a></li>
